Reload bluetooth keys. Added combos

--- a/config/behaviors.dtsi
+++ b/config/behaviors.dtsi
@@ -3,7 +3,7 @@
         sticky_comma: sticky_comma {
             compatible = "zmk,behavior-sticky-key";
             label = "Sticky COMMA";
-            bindings = <&kp KC_COM>;
+            #binding-cells = <1>;
             release-after-ms = <500>;
         };
     };
