--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,2 +1,10 @@
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_KEYBOARD_NAME="CradioKeyboard1"
+# Habilitar el soporte para USB
+CONFIG_ZMK_USB=y
+
+# Deshabilitar el Split por Bluetooth (esto obliga a buscar cable)
+CONFIG_ZMK_SPLIT_BLE=n
+
+# Si tu hardware usa comunicación Serial (lo más común en TRRS)
+CONFIG_ZMK_SPLIT=y
