--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,10 +1,19 @@
+# Configuración que ya tienes
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_KEYBOARD_NAME="CradioKeyboard1"
-# Habilitar el soporte para USB
-CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_BLE=y
 
-# Deshabilitar el Split por Bluetooth (esto obliga a buscar cable)
+# --- AÑADE ESTO PARA MODO CABLEADO ---
+
+# 1. Desactivar el Split por Bluetooth (OBLIGATORIO)
 CONFIG_ZMK_SPLIT_BLE=n
 
-# Si tu hardware usa comunicación Serial (lo más común en TRRS)
+# 2. Habilitar el Split general (necesario para comunicación serial)
 CONFIG_ZMK_SPLIT=y
+
+# 3. Asegurar que el USB esté activo
+CONFIG_ZMK_USB=y
+
+# 4. Opcional: Priorizar USB sobre Bluetooth para evitar lag
+CONFIG_ZMK_USB_BOOTLOADER=y
